# SearchEngine

./: .gitmodules  CMakeLists.txt  README.md  config.json  requests.json
.cache/clangd/index/: ConverterJSON.cpp.CBF36DFDBBDA0787.idx  ConverterJSON.h.46FF4560C9E98AA1.idx  abi_macros.hpp.CC09DE9FF407FA4C.idx  adl_serializer.hpp.12B2F363E5230DAD.idx  begin.hpp.8A361CDB07CC6A73.idx  binary_reader.hpp.D74B0C92FD1E8A95.idx  binary_writer.hpp.AFE80292DAB87EAC.idx  byte_container_with_subtype.hpp.E4BE458A98E34F85.idx  cpp_future.hpp.3AD42AD7D83F4BCC.idx  detected.hpp.E31072E6B1CD5856.idx  end.hpp.5C7A368C8159FC0E.idx  exceptions.hpp.321E97C6A469457E.idx  from_json.hpp.134B38B7B36A0B09.idx  gmock-actions.h.FA7E43870650F717.idx  gmock-all.cc.51B60635F2B7E410.idx  gmock-cardinalities.cc.04ECE9655D4B90C7.idx  gmock-cardinalities.h.6D95272CEC1339CA.idx  gmock-function-mocker.h.4B30F5403EE9411B.idx  gmock-generated-actions.h.7C4877C514427E0F.idx  gmock-internal-utils.cc.A93E79301E232D10.idx  gmock-internal-utils.h.EB2651687C915DBD.idx  gmock-matchers.cc.AEF47895DA8BDE39.idx  gmock-matchers.h.2B6CE593459584E0.idx  gmock-matchers.h.3CFAC90D5F11F856.idx  gmock-more-actions.h.FEBB05EEBE82A7D2.idx  gmock-more-matchers.h.70B9FE448E5060AB.idx  gmock-nice-strict.h.5DCFF5AD19A9A118.idx  gmock-port.h.9E17A4AA2323750A.idx  gmock-port.h.B6E5CEC680462B45.idx  gmock-pp.h.5E10CE33FBE62F53.idx  gmock-spec-builders.cc.F27E1084325C3308.idx  gmock-spec-builders.h.6236B35BC1B854AD.idx  gmock.cc.43D24439086E1A40.idx  gmock.h.745A2C26B8C4F150.idx  gmock_main.cc.E141FADBB0DF97A5.idx  gtest-all.cc.CB0E35D74C13918F.idx  gtest-assertion-result.cc.AA308D637AB6C3B5.idx  gtest-assertion-result.h.C1B7ADF3ADBA5647.idx  gtest-death-test-internal.h.BBE76586B55C8C7D.idx  gtest-death-test.cc.723B13CB32CBA981.idx  (+65 more)
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
resources/: file1.txt  file2.txt  file3.txt  file4.txt  file5.txt
src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: other_tests.cpp  test_ConverterJSON.cpp  test_InvertedIndex.cpp  test_SearchServer.cpp  test_converter.cpp
